# matfourd

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
testing/: CMakeLists.txt  core.cxx  include.cxx  layout.cxx  move.cxx  order.cxx  print.cxx
testing/include/testing/: core.hxx  mat_alias.hxx  move.hxx  vec_alias.hxx
testing/mat/: additive.cxx  alias.cxx  alias.hxx  alter.cxx  equality.cxx  type.cxx
testing/mat/multiply/: mat.cxx  outer.cxx  scalar.cxx  vec.cxx
testing/mat/type/: construct.cxx
testing/vec/: additive.cxx  alias.cxx  equality.cxx  swizzles.cxx  type.cxx
testing/vec/multiply/: cross.cxx  dot.cxx  scalar.cxx
testing/vec/type/: construct.cxx
